crates/swc_fast_ts_strip/tests/errors/enums.ts
enum Foo { }

export enum Bar { }